--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,28 @@
 <div class="home-panel">
-    <p>home</p>
-    
+   
+    <div class="container">
+        <div class="row">
+            <div class="col left-col">
+                <div class="left-col-container">
+                    <div class="home-list">
+                        <span><img src="assets/imgs/icons/dataset.png" alt="">Funcionalidades</span>
+                        <ul>
+                            <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Registro de falhas do simulador</span></li>
+                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Produção de relatórios</span></li>
+                            <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Acompanhamento de estatus</span></li>
+                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Criação de indices de Produção</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col right-col">
+                <div class="right-col-container">
+                        <div class="center-content">
+                            <p>Linchpin @</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   
 </div>
