--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,1 +1,10 @@
 @import './variables';
+
+@font-face {
+    font-family: 'monotonFont';
+    src: url('../../assets/monoton-regular.ttf');
+  }
+  @font-face {
+    font-family: 'montSerratFont';
+    src: url('../../assets/Montserrat-variableFont.ttf');
+  }
