--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     padding-top: 5px;
-    box-shadow: $box-shadow;
+    box-shadow: $mybox-shadow;
     
     .col-4{
         display: inline-flex;
