--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,6 @@
 $sidebar-width: 300px;
 $topbar-height: 53px;
-$box-shadow:2px 0px 11px -3px #888888;
+$mybox-shadow:2px 0px 11px -3px #888888;
 $contentHoverBackgroundColr: rgb(206, 202, 202);
+$homeLeftContainerColor: #4485cf;
+$mainContentBackgroundColor:#ebebeb;
