changed dataBase (to jasondb) - API

--- a/src/app/relatorios/relatorios.component.scss
+++ b/src/app/relatorios/relatorios.component.scss
@@ -15,7 +15,7 @@
     margin-left: 1em;
     margin-right: 3em;
     background-color: white;
-    box-shadow: $box-shadow;
+    box-shadow: $mybox-shadow;
     border-radius: 10px;
     .padding-container{
         padding: 10px;
