--- a/src/app/simulators/simulators.component.html
+++ b/src/app/simulators/simulators.component.html
@@ -13,6 +13,7 @@
             <div class="link-container">
                     <a routerLink="/simuladores/{{element.id}}">Enviar Relatório</a>
             </div>
+            <a (click)="removeData(element.id)">remover</a>
         </div>
     </div>
 </div>
