--- a/src/app/side-panel/side-panel.component.html
+++ b/src/app/side-panel/side-panel.component.html
@@ -3,7 +3,7 @@
         <!--<span><img src="assets/imgs/icons/line-start.png" class="line-icon" alt=""></span>-->
         <ul class="first-side-menu-list">
           <li><img src="assets/imgs/icons/AddSimulator-icon.png" alt=""><a data-bs-toggle="modal" (click)="openDialog()">Adicionar Simulador</a></li>
-          <li><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Status Geral Simulador</a></li>
+          <li><img src="assets/imgs/icons/Status-icon.png" alt=""><a routerLink="status">Status Geral Simulador</a></li>
           <hr class="horizontal-line">
         </ul>
        
