--- a/src/app/simulators/simulator-details/simulator-details.component.html
+++ b/src/app/simulators/simulator-details/simulator-details.component.html
@@ -54,9 +54,9 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)]="carotideoDireitoValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Pulso Fraco</mat-option>
-                              <mat-option value="3">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -69,9 +69,9 @@
                         <mat-form-field appearance="outline">
                         <mat-label>Escolha...</mat-label>
                         <mat-select [(ngModel)]="carotideoEsquerdoValue">
-                          <mat-option value="1">Parou de Funcionar</mat-option>
-                          <mat-option value="2">Pulso Fraco</mat-option>
-                          <mat-option value="3">Nenhuma Falha</mat-option>
+                          <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                          <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
+                          <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                         </mat-select>
                         </mat-form-field>
                     </td>
@@ -82,9 +82,9 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)]= "radialDireitoValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Pulso Fraco</mat-option>
-                              <mat-option value="3">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -95,9 +95,9 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "braquealDireitoValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Pulso Fraco</mat-option>
-                              <mat-option value="3">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -108,8 +108,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "manguitoValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -132,8 +132,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "incursoesRespValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -145,9 +145,9 @@
                         <mat-form-field appearance="outline">
                         <mat-label>Escolha...</mat-label>
                         <mat-select [(ngModel)] = "eletrodosMonitValue">
-                          <mat-option value="1">Parou de Funcionar</mat-option>
-                          <mat-option value="2">Faltam Eletrodos</mat-option>
-                          <mat-option value="3">Nenhuma Falha</mat-option>
+                          <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                          <mat-option value="Faltam Eletrodos">Faltam Eletrodos</mat-option>
+                          <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                         </mat-select>
                         </mat-form-field>
                     </td>
@@ -158,9 +158,9 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "bordasChoqueValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Faltam Bordas</mat-option>
-                              <mat-option value="3">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Faltam Bordas">Faltam Bordas</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -171,8 +171,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "auscultaCardiacaValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
@@ -183,8 +183,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
                             <mat-select [(ngModel)] = "auscultaPulmonarValue">
-                              <mat-option value="1">Parou de Funcionar</mat-option>
-                              <mat-option value="2">Nenhuma Falha</mat-option>
+                              <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
+                              <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </td>
