--- a/src/app/status/status.component.html
+++ b/src/app/status/status.component.html
@@ -1,1 +1,44 @@
-<p>status works!</p>
+<div class="page-tittle">
+    <h2>Status dos Simuladores</h2>
+  </div>
+<div class="filter-form">
+    <mat-form-field>
+      <mat-label>Filtrar por Data</mat-label>
+      <mat-select>
+          <mat-option value="antigo">Mais antigo</mat-option>
+          <mat-option value="recente">Mais recente</mat-option>
+      </mat-select>
+    </mat-form-field>
+</div>
+<div class="status-container">
+    <div class="container padding-container">
+        <div class="row">
+          <!--ng container tag for using ngFor without repeating the element-->
+          <ng-container *ngFor="let element of formData">
+            <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <h3 class="card-title">Nome - {{element.simulatorName}}</h3>
+                    <p class="card-text">
+                      <img src="assets/imgs/icons/viewSearch.png" alt="searchIcon">
+                      <a class="view-dialog-link" (click)="openViewDialog(element.id)">Ver relatorio</a>
+                    </p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Codigo: {{element.formCode}}</li>
+                    <li class="list-group-item">Status: ABERTO</li>
+                  </ul>
+                  <div class="card-body">
+                    <span class="pdf-tittle">Definir Status: </span>
+                    <select name="dropdown">
+                        <option value="fechar">FECHAR</option>
+                        <option value="pendente">PENDENTE</option>
+                    </select>
+                    <button type="button" class="btn-confirm">Confirmar</button>
+                  </div>
+                </div>
+            </div>
+          </ng-container>
+        </div>
+    </div>
+</div>
