--- a/src/app/relatorios/relatorios.component.html
+++ b/src/app/relatorios/relatorios.component.html
@@ -27,7 +27,7 @@
                   </ul>
                   <div class="card-body">
                     <span class="pdf-tittle">PDF Download: </span>
-                    <a href="#" class="card-link">Download</a>
+                    <a  class="card-link" (click)="generatePDF(i)">Download</a>
                   </div>
                 </div>
             </div>
