--- a/src/app/simulators/simulators.component.scss
+++ b/src/app/simulators/simulators.component.scss
@@ -70,7 +70,7 @@
                 color: white;
             }
             box-shadow: 2px 0px 11px -3px #888888;
-            background-color: $homeLeftContainerColor;
+            background-color:$btnsBackgroundColor;
         }
     }
 }
