--- a/src/app/status/status.component.html
+++ b/src/app/status/status.component.html
@@ -34,7 +34,7 @@
                         <option value="fechar">FECHAR</option>
                         <option value="pendente">PENDENTE</option>
                     </select>
-                    <button type="button" class="btn-confirm">Confirmar</button>
+                    <button mat-raised-button color="primary" type="button" class="btn-confirm">Confirmar</button>
                   </div>
                 </div>
             </div>
