--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -44,8 +44,9 @@
 
             &:hover{
                 cursor: pointer;
-                background-color: rgb(206, 202, 202);
+                background-color: $homeLeftContainerColor;
                 border-radius: 4px;
+                color: white;
             }
         }
         
