--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,3 +4,4 @@ $mybox-shadow:2px 0px 11px -3px #888888;
 $contentHoverBackgroundColr: rgb(206, 202, 202);
 $homeLeftContainerColor: #4485cf;
 $mainContentBackgroundColor:#ebebeb;
+$btnsBackgroundColor: #3F51B5;
