--- a/src/app/simulators/simulator-details/simulator-details.component.html
+++ b/src/app/simulators/simulator-details/simulator-details.component.html
@@ -49,7 +49,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Carotideo Direito </th>
+                    <th scope="row" [innerHtml]="tableName1"></th>
                     <td>
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -60,11 +60,9 @@
                             </mat-select>
                         </mat-form-field>
                     </td>
-                    
                   </tr>
                   <tr>
-                    <th scope="row">Carotideo Esquerdo</th>
-                    
+                    <th scope="row"[innerHtml]="tableName2"></th>
                     <td>
                         <mat-form-field appearance="outline">
                         <mat-label>Escolha...</mat-label>
@@ -77,7 +75,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Radial direito</th>
+                    <th scope="row" [innerHtml]="tableName3"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -90,7 +88,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Braqueal direito</th>
+                    <th scope="row" [innerHtml]="tableName4"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -103,7 +101,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Aparelho de medir Pressão</th>
+                    <th scope="row" [innerHtml]="tableName5"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -127,7 +125,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Incursões Respiratórias </th>
+                    <th scope="row"[innerHtml]="tableName6"></th>
                     <td>
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -137,10 +135,9 @@
                             </mat-select>
                         </mat-form-field>
                     </td>
-                    
                   </tr>
                   <tr>
-                    <th scope="row">Eletrodos para Monitorização</th>
+                    <th scope="row" [innerHtml]="tableName7"></th>
                     <td>
                         <mat-form-field appearance="outline">
                         <mat-label>Escolha...</mat-label>
@@ -153,7 +150,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Bordas de Choque Elétrico</th>
+                    <th scope="row" [innerHtml]="tableName8"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -166,7 +163,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Ausculta Cardiaca</th>
+                    <th scope="row"[innerHtml]="tableName9"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
@@ -178,7 +175,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">Ausculta Pulmonar</th>
+                    <th scope="row" [innerHtml]="tableName10"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
                             <mat-label>Escolha...</mat-label>
