--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                             <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Registro de falhas do simulador</span></li>
                             <li><img src="assets/imgs/icons/routine.png" alt=""><span>Produção de relatórios</span></li>
                             <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Acompanhamento de estatus</span></li>
-                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Criação de indices de Produção</span></li>
+                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Analise de indices de Produção</span></li>
                         </ul>
                     </div>
                 </div>
@@ -18,8 +18,10 @@
             <div class="col right-col">
                 <div class="right-col-container">
                         <div class="center-content">
-                            <p>Linchpin @</p>
+                            <p class="app-logo">Linchpin @</p>
+                            <p class="app-sub-logo">Cuide da saúde do seu simulador</p>
                         </div>
+                        
                 </div>
             </div>
         </div>
