--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,3 +5,10 @@ $contentHoverBackgroundColr: rgb(206, 202, 202);
 $homeLeftContainerColor: #4485cf;
 $mainContentBackgroundColor:#ebebeb;
 $btnsBackgroundColor: #3F51B5;
+
+//PALLET COLORS 
+$firstColor:#EDAE49;
+$secondColor:#D1495B;
+$thirdColor:#00798C;
+$forthColor:#30638E;
+$fifthColor:#003D5B;
