--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,7 +4,15 @@
     font-family: 'monotonFont';
     src: url('../../assets/monoton-regular.ttf');
   }
-  @font-face {
+@font-face {
     font-family: 'montSerratFont';
     src: url('../../assets/Montserrat-variableFont.ttf');
   }
+@font-face {
+    font-family: 'indieFlower';
+    src: url('../IndieFlower-Regular.ttf');
+  }
+@font-face {
+  font-family: 'twinkleFont';
+  src: url('../TwinkleStar-Regular.ttf');
+}
