--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
 .home-panel{
     height: 100%;
     .row{
-        margin-top: 24px;
+        margin-top: -26px;
         .col{
             height: 500px;
             //border: 1px dotted black;
@@ -12,7 +12,7 @@
                 border-radius: 5px;
                 background-color: $homeLeftContainerColor;
                 width: 700px;
-                height: 700px;
+                height: 600px;
                 margin-left: 3em;
                 .home-list{
                     position: absolute;
@@ -37,16 +37,24 @@
                 border-radius: 25px;
                 z-index: 1;
                 position: absolute;
-                width: 600px;
+                width: 570px;
                 height: 500px;
                 margin-left: -20em;
                 margin-top: 6em;
                 .center-content{
                     margin-top: 13em;
                     margin-left: 5em;
-                    p{
+                    .app-logo{
                         font-family: 'monotonFont';
                         font-size: 70px;
+                    }
+                    .app-sub-logo{
+                        margin-top: 35px;
+                        font-family: 'twinkleFont';
+                        font-weight: bold;
+                        font-size: 20px;
+                        color: $homeLeftContainerColor;
+                        margin-left: 30%;
                     }
                 }
             }
