--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,30 +1,28 @@
 
-<h1 mat-dialog-title>Adicionar simulador</h1>
+<h1 mat-dialog-title>Adicionar Paciente</h1>
 <div mat-dialog-content>
-    <mat-form-field>
-    <mat-label>Novo simulador</mat-label>
-        <mat-select [(ngModel)]="simulatorName">
-            <mat-option value="simManALs">SimManALS</mat-option>
-            <mat-option value="simMan3G">SimMan3G</mat-option>
-            <mat-option value="simJunior">SimJunior</mat-option>
-            <mat-option value="simBaby">SimBaby</mat-option>
-            <mat-option value="MegaCodeKelly">MegaCode Kelly</mat-option>
+    <mat-form-field class="simulador-matform">
+        <mat-label>Novo simulador</mat-label>
+        <mat-select [(ngModel)]="selectedSimulator">
+                <mat-option value="SimManALs">SimManALS</mat-option>
+                <mat-option value="SimMan3G">SimMan3G</mat-option>
+                <mat-option value="SimJunior">SimJunior</mat-option>
+                <mat-option value="SimBaby">SimBaby</mat-option>
+                <mat-option value="SimNewB">SimNew B</mat-option>
+                <mat-option value="MegaCodeKelly">MegaCode Kelly</mat-option>
+                <mat-option value="MegaCodeKid">MegaCode Kid</mat-option>
+                <mat-option value="NurseAnne">Nurse Anne</mat-option>
+                <mat-option value="RessusciAnne">Rescussi Anne</mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field hintLabel="Max 6 characters" appearance="fill">
+
+    <mat-form-field class="codigo-matform" hintLabel="Max 6 characters" appearance="fill">
         <mat-label>Codigo do simulador</mat-label>
         <input matInput #simulatorCode maxlength="6" placeholder="Ex. CC3TCF">
         <mat-hint align="end">{{simulatorCode.value.length}}/6</mat-hint>
     </mat-form-field>
-    <p class="button-paragraph">
-        <button mat-raised-button
-        matTooltip="Adicione uma imagem"
-        aria-label="Button that displays a tooltip when focused or hovered over">
-        Imagem
-        </button>
-    </p>
 </div>
 <div mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-raised-button mat-dialog-close (click)="getModalInfo(simulatorCode.value)">Confirmar</button>
+    <button mat-raised-button mat-dialog-close (click)="getModalInfo(simulatorCode.value)">Adicionar!</button>
   </div>
