--- a/src/app/relatorios/relatorios.component.scss
+++ b/src/app/relatorios/relatorios.component.scss
@@ -6,17 +6,14 @@
     margin-top: 10px;
   
 }
-.filter-form{
-    float: right;
-    margin-right: 45px;
-}
+
 .relatorios-container{
-    margin-top: 6em;
+    margin-top: 1em;
     margin-left: 1em;
     margin-right: 3em;
-    background-color: white;
-    box-shadow: $mybox-shadow;
-    border-radius: 10px;
+    //background-color: white;
+    //box-shadow: $mybox-shadow;
+    //border-radius: 10px;
     .padding-container{
         padding: 10px;
     }
@@ -26,7 +23,21 @@
         .card{
             width: 15rem;
             margin-top: 10px;
-            background-color: rgb(235,235,235);
+            box-shadow: $mybox-shadow;
+            background-color: white;
+            .list-group{
+                    
+                    li{
+                        background-color: white;
+                    }
+            }
+            .card-footer{
+                .download-btn{
+                   margin: auto;
+                   width: 200px;
+                   color: $homeLeftContainerColor;
+                }
+            }
         }
     }
 }
