--- a/src/app/simulators/simulator-details/simulator-details.component.html
+++ b/src/app/simulators/simulator-details/simulator-details.component.html
@@ -1,40 +1,39 @@
-<div class="icon-container">
-  <p>--</p>
-  <!--<img src="\assets\imgs\icons\line-end.png" alt="sws">-->
-</div>
+<h2 class="page-tittle">Relatório do seu simulador {{simulator.simulatorName}}</h2>
 <div class="container page-header-container">
     <div class="row">
-      
           <div class="col">
-              <h2 class="page-tittle">{{mysimulator.name}}</h2>
               <h3 class="page-sub-tittle">
-                  Quantidade
-              <span class="badge bg-success">{{mysimulator.codes.length}}</span>
+                  <img src="../../../assets/imgs/icons/health/goodHealth64.png" alt="">
+                  <button class="array-size-btn" mat-mini-fab matTooltip="Simuladores Saudaveis" color="primary">{{arraySize}}</button>
+                  Estamos todos Bem !
               </h3>
           </div>
           <div class="col">
               <ul class="code-list">
                   <li>
                       <mat-form-field appearance="outline">
-                          <mat-label>Escolha uma data..</mat-label>
-                          <input  matInput [matDatepicker]="picker" (dateChange)="gettingDate($event)">
+                          <mat-label>Escolha uma Data...</mat-label>
+                          <input #dateinput matInput [matDatepicker]="picker" (dateChange)="gettingDate($event,dateinput)">
                           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                           <mat-datepicker #picker></mat-datepicker>
                       </mat-form-field>
                     </li>
-                  <li>
+                  <li> 
                       <mat-form-field appearance="outline">
-                          <mat-label>Escolha o Codigo...</mat-label>
+                          <mat-label>Codigo do Simulador...</mat-label>
                           <mat-select [(ngModel)]= "simulatorCode">
-                            <!--The value property is important! -->
-                            <mat-option  *ngFor="let element of mysimulator.codes; let i = index" [value] = "element">{{element}}</mat-option>
+                            <!--The [value} property is important! -->
+                            <mat-option #option  *ngFor="let element of simulator.simulatorCodes; let i = index"
+                                    [value] = "element" (click)="getMatOptionElement(option)">
+                                    {{element}} 
+                            </mat-option>
                           </mat-select>
+                         
                       </mat-form-field>
                   </li>
                   
               </ul>
           </div>
-       
     </div>
 </div>
 <div class="container page-body-container">
@@ -52,7 +51,7 @@
                     <th scope="row" [innerHtml]="tableName1"></th>
                     <td>
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label> Definir...</mat-label>
                             <mat-select [(ngModel)]="carotideoDireitoValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
@@ -65,7 +64,7 @@
                     <th scope="row"[innerHtml]="tableName2"></th>
                     <td>
                         <mat-form-field appearance="outline">
-                        <mat-label>Escolha...</mat-label>
+                        <mat-label>Definir...</mat-label>
                         <mat-select [(ngModel)]="carotideoEsquerdoValue">
                           <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                           <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
@@ -78,7 +77,7 @@
                     <th scope="row" [innerHtml]="tableName3"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)]= "radialDireitoValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
@@ -91,7 +90,7 @@
                     <th scope="row" [innerHtml]="tableName4"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "braquealDireitoValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Pulso Fraco">Pulso Fraco</mat-option>
@@ -104,7 +103,7 @@
                     <th scope="row" [innerHtml]="tableName5"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "manguitoValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
@@ -128,7 +127,7 @@
                     <th scope="row"[innerHtml]="tableName6"></th>
                     <td>
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "incursoesRespValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
@@ -140,7 +139,7 @@
                     <th scope="row" [innerHtml]="tableName7"></th>
                     <td>
                         <mat-form-field appearance="outline">
-                        <mat-label>Escolha...</mat-label>
+                        <mat-label>Definir...</mat-label>
                         <mat-select [(ngModel)] = "eletrodosMonitValue">
                           <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                           <mat-option value="Faltam Eletrodos">Faltam Eletrodos</mat-option>
@@ -153,7 +152,7 @@
                     <th scope="row" [innerHtml]="tableName8"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "bordasChoqueValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Faltam Bordas">Faltam Bordas</mat-option>
@@ -166,7 +165,7 @@
                     <th scope="row"[innerHtml]="tableName9"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "auscultaCardiacaValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
@@ -178,7 +177,7 @@
                     <th scope="row" [innerHtml]="tableName10"></th>
                     <td colspan="2">
                         <mat-form-field appearance="outline">
-                            <mat-label>Escolha...</mat-label>
+                            <mat-label>Definir...</mat-label>
                             <mat-select [(ngModel)] = "auscultaPulmonarValue">
                               <mat-option value="Parou de Funcionar">Parou de Funcionar</mat-option>
                               <mat-option value="Nenhuma Falha">Nenhuma Falha</mat-option>
@@ -192,8 +191,9 @@
         </div>
         <div class="gerar-relatorio-btn-container">
             <div class="btns-relatorio">
-                <button type="button" class="btn btn-outline-secondary" routerLink="/simuladores">Voltar</button>
-                <button type="button" class="btn btn-outline-success" (click)="onSubmit()">Gerar Relatorio</button>
+                <button mat-raised-button routerLink="/simuladores">Voltar</button>
+                <button mat-raised-button color="primary" (click)="onSubmit()">Gerar Relatorio</button>
+                
             </div>
         </div>
     </div>
