--- a/src/app/simulators/simulators.component.scss
+++ b/src/app/simulators/simulators.component.scss
@@ -2,13 +2,16 @@
 
 .page-tittle{
     position: absolute;
-    margin-left: 13px;
+    margin-left: -8px;
     margin-top: 10px;
+    h2{
+        font-family: 'montSerratFont';
+    }
   
 }
 .row{
     padding-top: 70px;
-    margin-left: -12px;
+    margin-left: -30px;
 }
 .col-3{
     margin-bottom: 25px;
@@ -25,26 +28,28 @@
         flex-direction: column;
         align-items: center;
 
-        .left-box{
-            //box-shadow: 2px 0px 11px -3px #888888;
-            max-height: 30px;
-            position: absolute;
-            margin-left: -20px;
-            margin-top: 10px;
-            background-color: $mainContentBackgroundColor;
-            border-radius: 8px;
-            p{
-                font-size: 13px;
-                padding: 4px;
-                margin-right: 5px;
-            }
-        }
+       
         .img-container{
             width: 100%;
             padding: 10px;
             display: flex;
             //justify-content: center;
-
+            .left-box{
+                //box-shadow: 2px 0px 11px -3px #888888;
+                max-height: 30px;
+                position: absolute;
+                margin-left: -20px;
+                margin-top: 10px;
+                background-color: $mainContentBackgroundColor;
+                border-radius: 8px;
+                .card-name{
+                    font-family: 'montSerratFont';
+                    //font-weight: bold;
+                    font-size: 13px;
+                    padding: 4px;
+                    margin-right: 5px;
+                }
+            }
             img{
                 width: 230px;
                 height: 130px;
