login setup implemented

--- a/src/app/private/topbar/topbar.component.html
+++ b/src/app/private/topbar/topbar.component.html
@@ -10,9 +10,9 @@
         </div>
         <div class="col-8">
             <ul class="menu-links">
-                <li routerLink="/home">Home</li>
-                <li routerLink="/simuladores">Simuladores</li>
-                <li routerLink="/relatorios">Relatórios</li>
+                <li routerLink="/private/home">Home</li>
+                <li routerLink="/private/simuladores">Simuladores</li>
+                <li routerLink="/private/relatorios">Relatórios</li>
               </ul>
         </div>
     </div>
